<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddNoteActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_space"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginRight="@dimen/large_space"
                android:layout_marginStart="@dimen/large_space"
                android:layout_marginTop="@dimen/medium_space"
                android:textColorHint="@color/secondaryTextColor"
                app:hintTextAppearance="@style/HintTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/note_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/note_title"
                    android:inputType="text|textPersonName"
                    android:padding="@dimen/large_space"
                    android:textColor="@color/primaryTextColor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hash_tag_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                app:hintTextAppearance="@style/HintTextStyle"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="@+id/titleInputLayout"
                app:layout_constraintStart_toStartOf="@+id/titleInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/hash_tag_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/hash_tag"
                    android:inputType="text|textPersonName"
                    android:padding="@dimen/large_space"
                    android:textColor="@color/primaryTextColor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/medium_space"
                android:layout_marginTop="@dimen/medium_space"
                android:textColorHint="@color/secondaryTextColor"
                app:hintTextAppearance="@style/HintTextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/hash_tag_input_layout"
                app:layout_constraintStart_toStartOf="@+id/hash_tag_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/hash_tag_input_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/note_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_margin="0dp"
                    android:layout_marginEnd="@dimen/large_space"
                    android:layout_marginStart="@dimen/large_space"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top|start"
                    android:hint="@string/description_hint"
                    android:inputType="textAutoComplete|textMultiLine|textLongMessage"
                    android:padding="@dimen/large_space"
                    android:textAlignment="textStart"
                    android:textColor="@color/primaryTextColor" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>